# DeviceOfficall

./: README.md  pyproject.toml  requirements.txt
device/: __main__.py  login.py  string.py
