[tool]
[tool.poetry]
name = "Device Official"
version = "1.0"
description = "String Office "
authors = ["Ilham Mansiz <ilhammansiz188@gmail.com>"]
[tool.poetry.dependencies]
python = "^3.8"
gitpython = "*"
requests = "*"
bs4 = "*"
pyaes = "*"
rsa = "*"
cryptg = "*"
pysocks = "*"
hachoir = "*"
pillow = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
